--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   firebase_auth: ^4.6.3
   firebase_storage: ^11.2.4
   fluttertoast: ^8.2.2
-  font_awesome_flutter: ^10.6.0
-  google_sign_in: ^6.1.5
+  provider: ^6.1.2
+  firebase_remote_config: ^4.2.3
+  firebase_analytics: ^10.4.3
 
 dev_dependencies:
   flutter_test:
